--- a/src/app/mov/mov.component.scss
+++ b/src/app/mov/mov.component.scss
@@ -1,5 +1,5 @@
 .outline{
-    margin-left: 20px;
+    margin-left: 10px;
     .box{
         width:auto;
         height: 250px;
@@ -31,14 +31,17 @@
 }
 
 .space {
-    margin: 50px;
-    height: 160px;
-    width: 80px;
+    display: inline-block;
 
 }
 button{
     width: 80px;
     height: 20px;
+}
+.image{
+    width: 200px;
+    height:300px;
+    margin: 20px;
 }
 }
 
