--- a/src/app/mov/mov.component.scss
+++ b/src/app/mov/mov.component.scss
@@ -3,12 +3,17 @@
     .box{
         width:auto;
         height: 250px;
-        border-color: none;
+        border-color: rgb(175, 2, 2);
         border-radius: 10px;
         border-style: groove;
         padding-left: 20px;
-        background-color: rgba(187, 177, 165, 0.678);
-        box-shadow: rgba(187, 177, 165, 0.678);
+        background-color: rgb(175, 2, 2);
+        box-shadow:rgba(175, 3, 3, 0.555);
+        
+    }
+    .text{
+        color: white;
+        
     }
 
 
@@ -19,14 +24,19 @@
 
 }
 
+
 .container .content {
     position: absolute;
     bottom: 0;
     background: rgb(0, 0, 0);  
     background: rgba(0, 0, 0, 0.5);  
     color: #f1f1f1 ;  
-    width: 170px;   
+    width: 160px;   
     padding: 20px;
+    
+}
+a:hover{
+    opacity: 20%;
     
 }
 
@@ -36,11 +46,12 @@
 }
 button{
     width: 80px;
-    height: 20px;
+    height: 25px;
+    margin-top: 10px;
 }
 .image{
-    width: 200px;
-    height:300px;
+    width: 180px;
+    height:250px;
     margin: 20px;
 }
 }
