--- a/src/app/mov/mov.component.html
+++ b/src/app/mov/mov.component.html
@@ -30,7 +30,7 @@
             <div class="content">
                 <p>Title: {{movi.title}}</p>
                 <p>year: {{movi.year}}</p>
-                <p>Rating: {{movi.rating}}</p>
+                <p>{{movi.rating}}  <img class="star" src=".\assets\star.png" alt=''></p>
             </div>
         </a>
     </div>
