--- a/src/app/mov/mov.component.scss
+++ b/src/app/mov/mov.component.scss
@@ -1,58 +1,67 @@
-.outline{
+.outline {
     margin-left: 10px;
-    .box{
-        width:auto;
+
+    .box {
+        width: auto;
         height: 250px;
         border-color: rgb(175, 2, 2);
         border-radius: 10px;
         border-style: groove;
         padding-left: 20px;
         background-color: rgb(175, 2, 2);
-        box-shadow:rgba(175, 3, 3, 0.555);
-        
+        box-shadow: rgba(175, 3, 3, 0.555);
+
     }
-    .text{
+
+    .text {
         color: white;
-        
+
+    }
+
+    .container {
+        position: relative;
+        max-width: 500px;
+
     }
 
 
-.container {
-    position: relative;
-    max-width: 800px;
-    
+    .container .content {
+        position: absolute;
+        bottom: 0;
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.5);
+        color: #f1f1f1;
+        width: 140px;
+        padding: 20px;
+        margin: 20px;
 
-}
+    }
+
+    a:hover {
+        opacity: 80%;
 
 
-.container .content {
-    position: absolute;
-    bottom: 0;
-    background: rgb(0, 0, 0);  
-    background: rgba(0, 0, 0, 0.5);  
-    color: #f1f1f1 ;  
-    width: 160px;   
-    padding: 20px;
-    
-}
-a:hover{
-    opacity: 20%;
-    
-}
+    }
 
-.space {
-    display: inline-block;
+    .space {
+        display: inline-block;
 
-}
-button{
-    width: 80px;
-    height: 25px;
-    margin-top: 10px;
-}
-.image{
-    width: 180px;
-    height:250px;
-    margin: 20px;
-}
-}
+    }
 
+    button {
+        width: 80px;
+        height: 25px;
+        margin-top: 10px;
+    }
+
+    .image {
+        width: 180px;
+        height: 250px;
+        margin: 20px;
+    }
+
+    .star {
+        height: 25px;
+        width: 25px;
+    }
+}
